--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -4,3 +4,4 @@
 @use 'main_components/section2';
 @use 'main_components/section3';
 @use 'main_components/section4';
+@use 'main_components/section5';
