--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -90,6 +90,12 @@
         
         
     }
+
+    .wtrclr-on-sctn-3{
+        position: absolute;
+        bottom: -1rem;
+        left: -2.5rem;
+    }
 }
 
 
