--- a/src/style/sass/main_components/section1.scss
+++ b/src/style/sass/main_components/section1.scss
@@ -175,7 +175,9 @@
     
             .main-text{
                 // height: min-content;
-                
+                transition: .5s ease-in-out;
+                animation-delay: .5;
+
                 color: #ad9654;
                 display: grid;
                 grid-template-rows: repeat(auto-fill, 3fr);
@@ -284,3 +286,5 @@
     }
 
 }
+
+
