--- a/src/style/sass/main_components/section4.scss
+++ b/src/style/sass/main_components/section4.scss
@@ -92,7 +92,7 @@
                         position: absolute;
                         align-items:center;
                         justify-content:center;
-                        transform: rotate(10deg);
+                        // transform: rotate(10deg);
                         // font-family:'Font Awesome 5 Free';
                     }
                 }
