--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -275,6 +275,12 @@ li {
   font-size: 1.125rem;
   font-weight: 300;
 }
+.sctn1 .content .first-container .versiculo .cita {
+  line-height: 2;
+  color: #3f3f3f;
+  font-weight: 400;
+  margin-top: 0.75rem;
+}
 .sctn1 .content .first-container .main-text {
   transition: 0.5s ease-in-out;
   animation-delay: 0.5;
