--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -512,11 +512,19 @@ li {
   left: -7.5rem;
   transform: rotate(45deg);
 }
-.sctn3 .flwr_sctn-3-1 {
-  width: 12%;
+.sctn3 .png_sctn-3-1 {
+  position: absolute;
 }
-.sctn3 .flwr_sctn-3-1 .f-s3 {
-  position: relative;
+.sctn3 .png_sctn-3-1 .f-s3_1 {
+  position: absolute;
+  width: 13%;
+  left: 18%;
+  top: -15%;
+}
+.sctn3 .png_sctn-3-1 .f-s3_3 {
+  width: 45%;
+  display: inline-block;
+  width: 40%;
 }
 
 .sctn4 {
