--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -109,12 +109,29 @@
         transform: rotate(45deg);
     }
 
-    .flwr_sctn-3-1{
-        width:12%;
-        .f-s3{
-            position: relative;
-        }
+    .png_sctn-3-1{
+        position: absolute;
+        // display: flex;
+        // box-sizing: none;
+        // width: min-content;
+        // position: absolute;
+        // display: block;
+        // left: -50%;
+        // z-index: 1000;
 
+
+        .f-s3_1{
+            position: absolute;
+            width: 13%;
+            left: 18%;
+            top: -15%;
+        }
+        .f-s3_3{
+            width: 45%;
+            display:inline-block;
+            width: 40%;
+            // margin: auto;
+        }
     }
 }
 
