--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -512,19 +512,11 @@ li {
   left: -7.5rem;
   transform: rotate(45deg);
 }
-.sctn3 .png_sctn-3-1 {
+.sctn3 .f-s3_3 {
   position: absolute;
-}
-.sctn3 .png_sctn-3-1 .f-s3_1 {
-  position: absolute;
-  width: 13%;
-  left: 18%;
-  top: -15%;
-}
-.sctn3 .png_sctn-3-1 .f-s3_3 {
-  width: 45%;
-  display: inline-block;
-  width: 40%;
+  width: 35%;
+  bottom: -2rem;
+  right: 0;
 }
 
 .sctn4 {
