--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -109,30 +109,15 @@
         transform: rotate(45deg);
     }
 
-    .png_sctn-3-1{
+    .f-s3_3{
         position: absolute;
-        // display: flex;
-        // box-sizing: none;
-        // width: min-content;
-        // position: absolute;
-        // display: block;
-        // left: -50%;
-        // z-index: 1000;
-
-
-        .f-s3_1{
-            position: absolute;
-            width: 13%;
-            left: 18%;
-            top: -15%;
-        }
-        .f-s3_3{
-            width: 45%;
-            display:inline-block;
-            width: 40%;
-            // margin: auto;
-        }
+        // display:inline-block;
+        width: 35%;
+        bottom: -2rem;
+        right: 0;
+        // margin: auto;
     }
+
 }
 
 
