--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -112,9 +112,17 @@
     .f-s3_3{
         position: absolute;
         // display:inline-block;
-        width: 35%;
+        width: 60%;
         bottom: -2rem;
         right: 0;
+        // margin: auto;
+    }
+    .f-s3_4{
+        position: absolute;
+        // display:inline-block;
+        width: 25%;
+        left: 1rem;
+        top: 1rem;
         // margin: auto;
     }
 
