--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -268,8 +268,6 @@ li {
   margin-top: 0.75rem;
 }
 .sctn1 .content .first-container .main-text {
-  transition: 0.5s ease-in-out;
-  animation-delay: 0.5;
   color: #ad9654;
   display: grid;
   grid-template-rows: repeat(auto-fill, 3fr);
@@ -279,6 +277,7 @@ li {
   text-transform: capitalize;
   font-size: 4.5rem;
   font-weight: 100;
+  opacity: 0;
 }
 .sctn1 .content .first-container .main-text .y {
   position: relative;
