--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -253,6 +253,7 @@ li {
   top: 0.5rem;
   font-size: 1.25rem;
   font-weight: 400;
+  opacity: 0;
 }
 .sctn1 .content .first-container .reason::first-letter {
   text-transform: uppercase;
@@ -268,7 +269,7 @@ li {
   margin-top: 0.75rem;
 }
 .sctn1 .content .first-container .main-text {
-  color: #ad9654;
+  color: #bda35b;
   display: grid;
   grid-template-rows: repeat(auto-fill, 3fr);
   justify-content: center;
@@ -297,6 +298,9 @@ li {
   margin-top: 1.5rem;
   line-height: 4.5rem;
 }
+.sctn1 .content .first-container .anim {
+  opacity: 0;
+}
 .sctn1 .content .first-container .text-card_container .intro {
   font-family: "Work Sans";
   padding-bottom: 1.5rem;
@@ -322,7 +326,7 @@ li {
   width: 100%;
 }
 .sctn1 .content .first-container .date {
-  margin-top: 1rem;
+  margin: 1rem auto 0;
   font-size: 1.25rem;
   font-weight: 400;
   font-family: "Work Sans";
@@ -351,6 +355,14 @@ li {
   font-family: "Work Sans";
 }
 
+@keyframes anim1 {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .sctn2 {
   margin-top: -3rem;
 }
