--- a/src/style/sass/main_components/section1.scss
+++ b/src/style/sass/main_components/section1.scss
@@ -162,6 +162,7 @@
                 // color: #3f3f3f;
                 font-size: 1.25rem;
                 font-weight: 400;
+                opacity: 0;
                 &::first-letter{
                     text-transform: uppercase;
                 }
@@ -185,7 +186,7 @@
                 // transition: .5s ease-in-out;
                 // animation-delay: .5;
 
-                color: #ad9654;
+                color: #bda35b;
                 display: grid;
                 grid-template-rows: repeat(auto-fill, 3fr);
                 justify-content: center;
@@ -225,6 +226,10 @@
                     
                 }
             }
+
+            .anim{
+                opacity: 0;
+            }
     
             .text-card_container{
                 .intro{
@@ -256,7 +261,7 @@
                 }
             }
             .date{
-                margin-top: 1rem;
+                margin: 1rem auto 0;
                 font-size: 1.25rem;
                 font-weight: 400;
                 font-family: $work-sans;
@@ -266,6 +271,8 @@
                 justify-content: center;
                 align-items: center;
                 width: 90%;
+
+                // opacity: 0;
                 // color: #858585;
         
                 .separator{
@@ -288,11 +295,23 @@
                 // font-weight: 400;
                 margin-top: 1rem;
                 font-family: $work-sans;
+                // opacity: 0;
                 // color: #202020;
             }
         }
     }
 
+}
+
+@keyframes anim1{
+    from {
+        // transform: translateX(100px);
+        opacity: 0;
+    }
+    to {
+        // transform: translateX(0);
+        opacity: 1;    
+    }
 }
 
 
