--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -138,7 +138,7 @@ li {
 }
 .sctn1 .familyName {
   font-size: 1.25rem;
-  background: #fdf9ec;
+  background: white;
   padding: 0.5rem 1rem;
   margin-top: 1.5rem;
   text-transform: capitalize;
