--- a/src/style/sass/main_components/section1.scss
+++ b/src/style/sass/main_components/section1.scss
@@ -5,7 +5,7 @@
     
     .familyName{
         font-size: 1.25rem;
-        background: $background_1;
+        background: white;
         padding: .5rem 1rem;
         margin-top: 1.5rem;
         text-transform: capitalize;
