--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 *,
 *::after,
 *::before {
@@ -618,15 +617,26 @@ li {
   background: #f3adb9;
 }
 .sctn4 .form .check .label_check .rad:checked::before {
-  width: 35px;
-  height: 35px;
-  display: flex;
-  content: "✔";
-  font-size: 25px;
-  font-weight: bold;
   position: absolute;
-  align-items: center;
-  justify-content: center;
+  left: 0;
+  top: 50%;
+  height: 25%;
+  width: 5px;
+  background-color: #ffffff;
+  content: "";
+  transform: translateX(12px) rotate(-45deg);
+  transform-origin: left bottom;
+}
+.sctn4 .form .check .label_check .rad:checked::after {
+  position: absolute;
+  left: 0;
+  bottom: 5px;
+  height: 5px;
+  width: 65%;
+  background-color: #ffffff;
+  content: "";
+  transform: translateX(15px) rotate(-45deg);
+  transform-origin: left bottom;
 }
 .sctn4 .form .btn {
   all: unset;
