--- a/src/style/sass/main_components/section4.scss
+++ b/src/style/sass/main_components/section4.scss
@@ -22,108 +22,131 @@
             font-size: 1.65rem;
         }
 
-
-        .form_description{
-            
-            display: block;
-            text-transform: lowercase;
-            width: 95%;
-            text-align: center;
-            margin-bottom: .75rem;
-
-            &::first-letter{
-                text-transform: uppercase;
-            }
-        }
-
-        .group-choice{
+        .check{
             display: grid;
-            width: 100%;
-            grid-auto-flow: column;
-            align-self: center;
-            justify-content: space-between;
+            place-items: center;
+            margin-top: 2rem;
 
-            .label_check{
-
-                display: grid;
-                grid-auto-flow: row;
-                gap: .95rem;
-                justify-content: center;
+            .form_description{
+            
+                display: block;
+                text-transform: lowercase;
+                width: 95%;
                 text-align: center;
-
-                .rad{
-                    border-radius: 50%;
-                    -webkit-appearance: none;
-                    -moz-appearance: none;
-                    -ms-appearance: none;
-                    -o-appearance: none;
-                    appearance: none;
-                    position: relative;
-                    top: 13.33333px;
-                    right: 0;
-                    bottom: 0;
-                    left: 0;
-                    height: 35px;
-                    width: 35px;
-                    transition: all 0.15s ease-out 0s;
-                    background: #cbd1d8;
-                    border: none;
-                    color: #fff;
-                    cursor: pointer;
-                    display: inline-block;
-                    // margin-right: 0.5rem;
-                    outline: none;
-                    position: relative;
-                    z-index: 1000;
+                margin-bottom: .75rem;
     
-                    // &:hover {
-                    //     background: #9faab7;
-                    //   }
-                    &:checked {
-                        background: $pink;
-                      }
+                &::first-letter{
+                    text-transform: uppercase;
+                }
+    
+            }
 
-                      
-                    &:checked::before {
-                        position: absolute;
-                        left: 0;
-                        top: 50%;
-                        height: 20%;
-                        width: 5px;
-                        background-color: #ffffff;
-                        content: "";
-                        transform: translateX(12px) rotate(-45deg);
-                        transform-origin: left bottom;
 
-                    }
-                    &:checked::after {
-                        position: absolute;
+            .group-choice{
+                display: grid;
+                width: 100%;
+                grid-auto-flow: column;
+                align-self: center;
+                justify-content: space-between;
+    
+                .label_check{
+    
+                    display: grid;
+                    grid-auto-flow: row;
+                    gap: .95rem;
+                    justify-content: center;
+                    text-align: center;
+    
+                    .rad{
+                        border-radius: 50%;
+                        -webkit-appearance: none;
+                        -moz-appearance: none;
+                        -ms-appearance: none;
+                        -o-appearance: none;
+                        appearance: none;
+                        position: relative;
+                        top: 13.33333px;
+                        right: 0;
+                        bottom: 0;
                         left: 0;
-                        bottom: 7px;
-                        height: 5px;
-                        width: 60%;
-                        background-color: #ffffff;
-                        content: "";
-                        transform: translateX(15px) rotate(-45deg);
-                        transform-origin: left bottom;
-                        // width: 35px;
-                        // height: 35px;
-                        // display:flex;
-                        // content: "\2714";
-                        // font-size: 25px;
-                        // font-weight:bold;
-                        // position: absolute;
-                        // align-items:center;
-                        // justify-content:center;
-                        // transform: rotate(10deg);
-                        // font-family:'Font Awesome 5 Free';
+                        height: 35px;
+                        width: 35px;
+                        transition: all 0.15s ease-out 0s;
+                        background: #cbd1d8;
+                        border: none;
+                        color: #fff;
+                        cursor: pointer;
+                        display: inline-block;
+                        // margin-right: 0.5rem;
+                        outline: none;
+                        position: relative;
+                        z-index: 1000;
+        
+                        // &:hover {
+                        //     background: #9faab7;
+                        //   }
+                        &:checked {
+                            background: $pink;
+                          }
+    
+                          
+                        &:checked::before {
+                            position: absolute;
+                            left: 0;
+                            top: 50%;
+                            height: 20%;
+                            width: 5px;
+                            background-color: #ffffff;
+                            content: "";
+                            transform: translateX(12px) rotate(-45deg);
+                            transform-origin: left bottom;
+    
+                        }
+                        &:checked::after {
+                            position: absolute;
+                            left: 0;
+                            bottom: 7px;
+                            height: 5px;
+                            width: 60%;
+                            background-color: #ffffff;
+                            content: "";
+                            transform: translateX(15px) rotate(-45deg);
+                            transform-origin: left bottom;
+    
+                        }
                     }
                 }
             }
+
+            .selection-number{  // thi is a button
+                margin-top: 2rem;
+                text-decoration: none;
+                text-transform: uppercase;
+                background-color: $pink;
+                font-family: $work-sans;
+                width: 70%;
+                font-size: 1.25rem;
+                color: $text-color;
+                text-align: center;
+                padding: .75rem 1rem;
+                cursor: pointer;
+                transition: .5s ease-in;
+                &:hover{
+                    background-color: $text-color;
+                    color: white;
+        
+                }
+            }
+
         }
 
 
         .type-list{
+            display: grid;
+            place-items: center;
+
+
+
             .list-people{
                 display: block;
                 text-transform: lowercase;
@@ -142,32 +165,43 @@
                 gap: 1.25rem;
                 
                 .guest1{
+                    text-transform: capitalize;
                     font-size: 1rem;
                     height: 2rem;
                     width: 15.35rem;
                 }
             }
 
-
-        }
-
-        .btn{
-            all: unset;
-            background-color: $pink;
-            font-family: $work-sans;
-            width: 70%;
-            font-size: 1.25rem;
-            // color:$text-color;
-            text-align: center;
-            padding: .75rem 1rem;
-            cursor: pointer;
-            transition: .5s ease-in;
-            &:hover{
-                background-color: $text-color;
-                color: white;
-    
+            .btn-confirm{
+                all: unset;
+                margin-top: 2rem;
+                background-color: $pink;
+                font-family: $work-sans;
+                width: 70%;
+                font-size: 1.25rem;
+                // color:$text-color;
+                text-align: center;
+                padding: .75rem 1rem;
+                cursor: pointer;
+                transition: .5s ease-in;
+                &:hover{
+                    background-color: $text-color;
+                    color: white;
+        
+                }
             }
+
         }
+
+        .lst-hide{
+            display: none;
+        }
+
+        .lst-show{
+            display: inline;
+        }
+
+
     }
 
 
