--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -662,6 +662,9 @@ li {
   background-color: #3f3f3f;
   color: white;
 }
+.sctn4 .form .hide-checkMark {
+  display: none;
+}
 .sctn4 .form .type-list {
   display: grid;
   place-items: center;
@@ -689,6 +692,7 @@ li {
 }
 .sctn4 .form .type-list .btn-confirm {
   all: unset;
+  place-self: center;
   margin-top: 2rem;
   background-color: #f3adb9;
   font-family: "Work Sans";
