--- a/src/style/sass/main_components/section4.scss
+++ b/src/style/sass/main_components/section4.scss
@@ -25,7 +25,7 @@
         .sinlePerson{
             display: grid;
             place-items: center;
-            .onliNameGuest{
+            .onlyNameGuest{
                 font-size: 1.75rem;
                 color: $text-color;
                 text-align: center;
