--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -134,16 +134,7 @@ li {
 }
 .sctn1 {
   background: none;
-}
-.sctn1 .familyName {
-  font-size: 1.25rem;
-  background: white;
-  padding: 0.5rem 1rem;
-  margin-top: 1.5rem;
-  text-transform: capitalize;
-  font-family: "Work Sans";
-  color: #3f3f3f;
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+  height: 100%;
 }
 .sctn1 .flower-container {
   z-index: 100;
@@ -224,6 +215,7 @@ li {
 .sctn1 .content {
   z-index: 100;
   display: grid;
+  gap: 3rem;
   place-items: center;
   justify-content: center;
   align-items: center;
@@ -232,6 +224,25 @@ li {
   padding: 1rem 0;
   background-color: rgba(255, 255, 255, 0.726);
   margin: 0 auto;
+}
+.sctn1 .content .versiculo {
+  width: 90%;
+  text-align: center;
+  background: white;
+  padding: 0.5rem 1rem;
+  font-family: "Work Sans";
+  color: #3f3f3f;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+  z-index: 100;
+  font-size: 1.125rem;
+  font-weight: 300;
+}
+.sctn1 .content .versiculo .cita {
+  text-transform: capitalize;
+  line-height: 2;
+  color: #3f3f3f;
+  font-weight: 400;
+  margin-top: 0.75rem;
 }
 .sctn1 .content .first-container {
   position: relative;
@@ -247,6 +258,16 @@ li {
   place-self: center;
   font-family: "Work Sans";
 }
+.sctn1 .content .first-container .familyName {
+  text-transform: capitalize;
+  position: relative;
+  text-align: center;
+  font-family: "Work Sans";
+  font-size: 1.5rem;
+  font-weight: 400;
+  padding-bottom: 1rem;
+  color: #3f3f3f;
+}
 .sctn1 .content .first-container .reason {
   margin-top: 0.5rem;
   top: 0.5rem;
@@ -257,16 +278,6 @@ li {
 .sctn1 .content .first-container .reason::first-letter {
   text-transform: uppercase;
 }
-.sctn1 .content .first-container .versiculo {
-  font-size: 1.125rem;
-  font-weight: 300;
-}
-.sctn1 .content .first-container .versiculo .cita {
-  line-height: 2;
-  color: #3f3f3f;
-  font-weight: 400;
-  margin-top: 0.75rem;
-}
 .sctn1 .content .first-container .main-text {
   color: #bda35b;
   display: grid;
@@ -275,7 +286,7 @@ li {
   align-items: center;
   font-family: "Parisienne", cursive;
   text-transform: capitalize;
-  font-size: 4.5rem;
+  font-size: 4.75rem;
   font-weight: 100;
   opacity: 0;
 }
@@ -560,6 +571,13 @@ li {
   padding: 3rem 1rem;
   gap: 2.75rem 1.5rem;
   place-items: center;
+}
+.sctn4 .form .message {
+  font-size: 1.5rem;
+  text-align: center;
+}
+.sctn4 .form .messageImg {
+  width: 80%;
 }
 .sctn4 .form .form_title {
   font-weight: 400;
