--- a/src/style/sass/main_components/section1.scss
+++ b/src/style/sass/main_components/section1.scss
@@ -141,6 +141,8 @@
             z-index: 100;
             font-size: 1.125rem;
             font-weight: 300;
+            // display: none;
+            opacity: 0;
 
             // &::first-letter{
             //     // text-transform: capitalize;
@@ -186,6 +188,7 @@
                 font-weight: 400;
                 padding-bottom: 1rem;
                 color: $text-color;
+                opacity: 0;
 
             }
 
