--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -14,7 +14,8 @@
         display: grid;
         place-items: center;
         width: 80%;
-        padding: 3rem 1rem;
+        padding: 3.5rem 1rem;
+        opacity: 0;
 
         .dress_icon{
             max-width: 18%;
@@ -23,7 +24,7 @@
         }
 
         .dresscode{
-            margin-top: 1rem;
+            margin-top: 2rem;
             width: 100%;
             padding: .5rem 1rem;
             background-color: #f3adb9;
@@ -84,7 +85,7 @@
             }
         }
         .reserva_color{
-            margin-top: 1.5rem;
+            margin-top: 2rem;
         }
         
         
