--- a/src/style/sass/main_components/section4.scss
+++ b/src/style/sass/main_components/section4.scss
@@ -15,6 +15,7 @@
         padding: 3rem 1rem;
         gap: 2.75rem  1.5rem;
         place-items: center; //////////////
+        opacity: 0;
 
         .message{
             font-size: 1.5rem;
